# todo.sh-notion

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  LICENSE.txt  README.md  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.md  requirements.txt
src/actions/: nadd  ndel  ndo  ndoc
src/todosh_notion/: __init__.py  settings.py  todonotion.py
tests/: conftest.py
