[metadata]
name = todo.sh-notion
description = Integration between todo.sh and Notion Task Lists!
author = Ronald Rodrigues Farias
author_email = ronald-farias@outlook.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/Ronald-TR/todo.sh-notion

project_urls =
    Documentation = https://pyscaffold.org/

platforms = any

classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python


[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

install_requires =
    importlib-metadata; python_version<"3.8"
    notion==0.0.28

[options.packages.find]
where = src
exclude =
    tests

testing =
    setuptools
    pytest
    pytest-cov

[options.entry_points]
console_scripts =
    todonotion = todosh_notion.todonotion:run

[tool:pytest]
addopts =
    --cov todosh_notion --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

# [bdist_wheel]
# universal = 1

[devpi:upload]
no_vcs = 1
formats = bdist_wheel

[flake8]
max_line_length = 88
extend_ignore = E203, W503
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
version = 4.0.1
package = todosh_notion
extensions =
    markdown
    no_skeleton
    pre_commit
